Split the tests into two parts, unit and integration.

--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,11 @@
   "autoload-dev": {
   },
   "scripts": {
-    "test": [
-      "vendor/bin/phpunit"
+    "test-unit": [
+      "vendor/bin/phpunit tests/Unit"
+    ],
+    "test-integration": [
+      "vendor/bin/phpunit tests/Integration"
     ]
   },
   "config": {
